--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,3 @@
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!userInfo && canIUse}}" bindtap="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-
-  <view class="usermotto">
-    <text class="user-motto" bind:tap="save">{{motto}}</text>
-  </view>
+<view class="">
+index
 </view>
