--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -1,3 +1,12 @@
-<view>
-  {{title}}
+<!-- 用户信息 -->
+<view class="weui-panel">
+  <view class="weui-media-box weui-media-box_appmsg">
+    <view class="weui-media-box__hd_in-appmsg">
+      <image class="weui-media-box__thumb" src="{{avatar}}" />
+    </view>
+    <view class="weui-media-box__bd_in-appmsg">
+      <view class="weui-media-box__title">{{name}}</view>
+      <view class="weui-media-box__desc">{{desc}}</view>
+    </view>
+  </view>
 </view>
