--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -1,12 +1,12 @@
 <!-- 用户信息 -->
 <view class="weui-panel">
   <view class="weui-media-box weui-media-box_appmsg">
-    <view class="weui-media-box__hd_in-appmsg">
-      <image class="weui-media-box__thumb" src="{{avatar}}" />
+    <view class="weui-media-box__hd_in-appmsg" bind:tap="onAvatarTap">
+      <image class="weui-media-box__thumb" src="{{avatar}}"></image>
     </view>
     <view class="weui-media-box__bd_in-appmsg">
       <view class="weui-media-box__title">{{name}}</view>
-      <view class="weui-media-box__desc">{{desc}}</view>
+      <view class="weui-media-box__desc">{{locale}}</view>
     </view>
   </view>
 </view>
