--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,12 @@
-<view class="" bind:tap="update">
-  <text class="iconfont icon-book"></text>
+<view class="" bind:tap="">
+
+  <view class="weui-grids">
+    <view class="weui-grid active" wx:for="{{taskList}}" wx:key="{{item.id}}">
+      <view class="weui-grid__icon">
+        <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
+      </view>
+      <view class="weui-grid__label">{{item.name}}</view>
+    </view>
+  </view>
+
 </view>
