--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,8 +1,3 @@
-view {
-  padding: 20px;
-  text-align: center;
-}
-.icon-book {
-  font-size: 30px;
-  color: #ec9f06
+.iconfont {
+  font-size: 28px;
 }
