--- a/pages/setting/setting.wxss
+++ b/pages/setting/setting.wxss
@@ -1,10 +1,11 @@
 page {
   background: #efeff4;
+  padding-top: 15px
 }
 
 .weui-media-box__thumb {
   border-radius: 50%
 }
-.weui-panel, .weui-cells {
-  margin-top: 10px !important
+.weui-cells {
+  margin-top: 15px
 }
