--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -14,7 +14,7 @@
 <!-- 设置项 -->
 <view class="weui-cells">
   <view class="weui-cell active" id="list_style" bind:tap="onCellTap">
-    <view class="weui-cell__bd">首页</view>
+    <view class="weui-cell__bd">首页风格</view>
     <view class="weui-cell__ft weui-cell__ft_in-access">{{listStyle.label}}</view>
   </view>
   <view class="weui-cell active no-padding">
