--- a/pages/setting/setting.wxss
+++ b/pages/setting/setting.wxss
@@ -6,6 +6,9 @@ page {
 .weui-media-box__thumb {
   border-radius: 50%
 }
+.weui-media-box__title {
+  font-size: 19px
+}
 .weui-cells {
   margin-top: 15px
 }
