--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,14 @@
-<view class="" bind:tap="">
-
-  <view class="weui-grids">
-    <view class="weui-grid active" wx:for="{{taskList}}" wx:key="{{item.id}}">
-      <view class="weui-grid__icon">
-        <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
-      </view>
-      <view class="weui-grid__label">{{item.name}}</view>
+<view class="weui-grids">
+  <view class="weui-grid active" wx:for="{{taskList}}" wx:key="{{item.id}}" bind:tap="" id="{{item.id}}">
+    <view class="weui-grid__icon">
+      <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
     </view>
+    <view class="weui-grid__label">{{item.name}}</view>
   </view>
-
+  <view class="weui-grid active" bind:tap="onTaskAdd">
+    <view class="weui-grid__icon">
+      <text class="iconfont icon-plusempty" style="color: #888888;"></text>
+    </view>
+    <view class="weui-grid__label">添加</view>
+  </view>
 </view>
