--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
-<view class="weui-grids">
-  <view class="weui-grid active" wx:for="{{taskList}}" wx:key="{{item.id}}" bind:tap="" id="{{item.id}}">
+<view wx:if="{{taskList.listStyle === 'grid'}}" class="weui-grids">
+  <view class="weui-grid active" wx:for="{{taskList.daily}}" wx:key="{{item.id}}" bind:tap="" id="{{item.id}}">
     <view class="weui-grid__icon">
       <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
     </view>
@@ -11,4 +11,8 @@
     </view>
     <view class="weui-grid__label">添加</view>
   </view>
+</view>
+
+<view wx:else>
+  list
 </view>
