--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -45,11 +45,11 @@
 
 <!-- 回收站、关于 -->
 <view class="weui-cells">
-  <navigator url="../../settingPages/recycle/recycle" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+  <navigator url="recycle/recycle" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
     <view class="weui-cell__bd">回收站</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
-  <navigator url="../../settingPages/about/about" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+  <navigator url="about/about" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
     <view class="weui-cell__bd">关于</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
