--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,3 +1,11 @@
+.grid, .list {
+  padding: 10px
+}
+.title {
+  padding: 0 10px;
+  font-size: 15px;
+  color: #888
+}
 .iconfont {
   font-size: 28px;
 }
