--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,23 +1,29 @@
 <!-- 九宫格布局 -->
-<view wx:if="{{listStyle === 'grid'}}" class="grid">
-  <!-- <view class="title">我的项目</view> -->
-  <view class="weui-grids">
-    <view class="weui-grid active" wx:for="{{taskList}}" wx:key="{{item.id}}" bind:tap="onTaskTap" id="{{item.id}}">
-      <view class="weui-grid__icon">
-        <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
-      </view>
-      <view class="weui-grid__label">{{item.name}}</view>
+<view wx:if="{{listStyle === 'grid'}}" class="weui-grids">
+  <view class="weui-grid active" wx:for="{{taskList}}" wx:key="{{item.id}}" bind:tap="onTaskTap" id="{{item.id}}">
+    <view class="weui-grid__icon">
+      <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
     </view>
-    <view wx:if="{{total < 20}}" class="weui-grid active" bind:tap="onTaskAdd">
-      <view class="weui-grid__icon">
-        <text class="iconfont icon-plusempty" style="color: #888888;"></text>
-      </view>
-      <view class="weui-grid__label">添加</view>
+    <view class="weui-grid__label">{{item.name}}</view>
+  </view>
+  <view wx:if="{{total < 100}}" class="weui-grid active" bind:tap="onTaskAdd">
+    <view class="weui-grid__icon">
+      <text class="iconfont icon-plusempty" style="color: #888;"></text>
     </view>
+    <view class="weui-grid__label">添加</view>
   </view>
 </view>
   
 <!-- 列表布局 -->
-<view wx:else class="list">
-  list
+<view wx:else class="weui-panel">
+  <view wx:for="{{taskList}}" wx:key="{{item.id}}" bind:tap="onTaskTap" id="{{item.id}}" class="weui-media-box weui-media-box_appmsg active">
+    <view class="weui-media-box__hd_in-appmsg" style="background: {{item.icon_color}}">
+      <text class="weui-media-box__thumb iconfont icon-{{item.icon}}"></text>
+    </view>
+    <view class="weui-media-box__bd_in-appmsg">
+      <view class="weui-media-box__title">{{item.name}}</view>
+      <view class="weui-media-box__desc">{{item.id}}</view>
+    </view>
+  </view>
 </view>
+
