--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,7 +9,7 @@
   </view>
 
   <!-- 新建任务 -->
-  <view wx:if="{{!editMode && (total < 100)}}" class="weui-grid active" bind:tap="onTaskAdd">
+  <view wx:if="{{!editMode && (total < taskMax)}}" class="weui-grid active" bind:tap="onTaskAdd">
     <view class="weui-grid__icon">
       <text class="iconfont icon-plusempty" style="color: #888;"></text>
     </view>
@@ -31,7 +31,7 @@
   </view>
 
   <!-- 新建任务 -->
-  <view wx:if="{{!editMode && (total < 100)}}" class="weui-media-box weui-media-box_appmsg active" bind:tap="onTaskAdd">
+  <view wx:if="{{!editMode && (total < taskMax)}}" class="weui-media-box weui-media-box_appmsg active" bind:tap="onTaskAdd">
     <view class="weui-media-box__hd_in-appmsg" style="background: #888;">
       <text class="iconfont icon-plusempty" style="color: #fff"></text>
     </view>
