--- a/pages/setting/recycle/recycle.wxml
+++ b/pages/setting/recycle/recycle.wxml
@@ -1,7 +1,17 @@
-<!-- 回收站、关于 -->
-<view class="weui-cells">
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">回收站</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
+<view wx:if="{{!!hiddenList.length}}" style="padding-top: 15px">
+  <view class="weui-cells">
+    <view class="weui-cell active" wx:for="{{hiddenList}}" wx:key="{{item.id}}" id="{{item.id}}" bind:tap="onCellTap" bind:longpress="onCellTap">
+      <view class="weui-cell__hd">
+        <text class="iconfont icon-{{item.icon}}" style="color: {{item.icon_color}};"></text>
+      </view>
+      <view class="weui-cell__bd">{{item.name}}</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    </view>
+  </view>
+</view>
+  
+<view wx:else>
+  <view class="weui-loadmore weui-loadmore_line">
+    <view class="weui-loadmore__tips weui-loadmore__tips_in-line">回收站是空的</view>
+  </view>
 </view>
