--- a/pages/index/add/add.wxss
+++ b/pages/index/add/add.wxss
@@ -1,1 +1,16 @@
-
+page {
+  background: #efeff4;
+}
+.weui-cells {
+  margin-top: 0
+}
+.weui-cell__ft.icon {
+  box-sizing: content-box;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 6px;
+}
+.iconfont {
+  font-size: 40px
+}
