--- a/pages/index/add/add.wxml
+++ b/pages/index/add/add.wxml
@@ -1,14 +1,47 @@
-<view style="padding-top: 15px">
+<view style="padding: 15px 0 76px 0">
   <view class="weui-cells">
+    <!-- 图标 -->
     <view class="weui-cell active" bind:tap="">
       <view class="weui-cell__bd">图标</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access icon">
-        <text class="iconfont icon-{{newTask.icon}}" style="color: {{newTask.icon_color}};"></text>
+      <view class="weui-cell__ft weui-cell__ft_in-access">
+        <view class="icon-container" style="background: {{newTask.icon_color}}">
+          <text class="iconfont icon-{{newTask.icon}}"></text>
+        </view>
       </view>
     </view>
-    <view class="weui-cell active" bind:tap="">
+    <!-- 名称 -->
+    <view class="weui-cell active" bind:tap="onInputFocus">
       <view class="weui-cell__bd">名称</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.name}}</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">
+        <input value="{{newTask.name}}" id="name" maxlength="{{10}}" focus="{{focus}}" bind:blur="onInputBlur"></input>
+      </view>
     </view>
   </view>
+  <view class="weui-cells">
+    <!-- 类型 -->
+    <view class="weui-cell active" id="type" bind:tap="onCellTap">
+      <view class="weui-cell__bd">类型</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.type.label}}</view>
+    </view>
+    <!-- deadline -->
+    <view wx:if="{{newTask.type.value === 'temp'}}" class="weui-cell active" id="deadline" bind:tap="onCellTap">
+      <view class="weui-cell__bd">完成期限</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.deadline}}</view>
+    </view>
+    <!-- 模式 -->
+    <view class="weui-cell active" id="method" bind:tap="onCellTap">
+      <view class="weui-cell__bd">模式</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.method.label}}</view>
+    </view>
+    <!-- 默认时长 -->
+    <view wx:if="{{newTask.method.value === 'timer'}}" class="weui-cell active" id="default_limit" bind:tap="onCellTap">
+      <view class="weui-cell__bd">默认时长</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.default_limit.label}}</view>
+    </view>
+  </view>
+</view>
+
+<!-- 创建按钮 -->
+<view class="button">
+  <button type="primary" bind:tap="onCreate">创 建</button>
 </view>
