--- a/pages/index/add/add.wxml
+++ b/pages/index/add/add.wxml
@@ -17,6 +17,7 @@
       </view>
     </view>
   </view>
+
   <view class="weui-cells">
     <!-- 类型 -->
     <view class="weui-cell active" id="type" bind:tap="onCellTap">
@@ -24,19 +25,30 @@
       <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.type.label}}</view>
     </view>
     <!-- deadline -->
-    <view wx:if="{{newTask.type.value === 'temp'}}" class="weui-cell active" id="deadline" bind:tap="onCellTap">
-      <view class="weui-cell__bd">完成期限</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.deadline}}</view>
+    <view class="weui-cell active picker-inside">
+      <picker id="deadline" mode="date" value="{{deadline}}" bind:change="onPickerChange">
+        <view wx:if="{{newTask.type.value === 'temp'}}" class="weui-cell active" id="deadline">
+          <view class="weui-cell__bd">完成期限</view>
+          <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.deadline}}</view>
+        </view>
+      </picker>
     </view>
+  </view>
+
+  <view class="weui-cells">
     <!-- 模式 -->
     <view class="weui-cell active" id="method" bind:tap="onCellTap">
       <view class="weui-cell__bd">模式</view>
       <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.method.label}}</view>
     </view>
     <!-- 默认时长 -->
-    <view wx:if="{{newTask.method.value === 'timer'}}" class="weui-cell active" id="default_limit" bind:tap="onCellTap">
-      <view class="weui-cell__bd">默认时长</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.default_limit.label}}</view>
+    <view class="weui-cell active picker-inside">
+      <picker id="default_limit" bind:change="onPickerChange" value="{{defaultLimitIndex}}" range="{{defaultLimits}}" range-key="label">
+        <view wx:if="{{newTask.method.value === 'timer'}}" class="weui-cell active" id="default_limit">
+          <view class="weui-cell__bd">默认时长</view>
+          <view class="weui-cell__ft weui-cell__ft_in-access">{{newTask.default_limit.label}}</view>
+        </view>
+      </picker>
     </view>
   </view>
 </view>
