--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -26,7 +26,7 @@
       <view class="weui-cell__bd">首页风格</view>
       <view class="weui-cell__ft weui-cell__ft_in-access">{{listStyle}}</view>
     </view>
-    <view class="weui-cell active no-padding">
+    <view class="weui-cell active picker-inside">
       <picker id="default_limit" bind:change="onPickerChange" value="{{defaultLimitIndex}}" range="{{defaultLimits}}" range-key="label">
         <view class="weui-cell">
           <view class="weui-cell__bd">默认时长</view>
