--- a/pages/index/add/add.wxss
+++ b/pages/index/add/add.wxss
@@ -1,6 +1,14 @@
 page {
   background: #efeff4;
 }
+.form {
+  padding: 15px 0 76px 0;
+  will-change: filter;
+  transition: filter 0.35s cubic-bezier(0.45, 1, 0.4, 1)
+}
+.form.blur {
+  filter: blur(10px);
+}
 .weui-cells:first-child {
   margin-top: 0
 }
