--- a/components/iconPicker/iconPicker.wxss
+++ b/components/iconPicker/iconPicker.wxss
@@ -5,7 +5,7 @@
   top: 0;
   bottom: 0;
   z-index: 1000;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, .6);
   transition: all .35s cubic-bezier(0.45, 1, 0.4, 1);
 }
 .mask.hide {
@@ -20,6 +20,7 @@
   bottom: 0;
   height: 100%;
   overflow: hidden;
+  will-change: height;
   transition: height .35s cubic-bezier(0.45, 1, 0.4, 1);
 }
 .hide .icon-picker {
@@ -27,12 +28,20 @@
 }
 
 .icon {
-  height: 83px;
-  line-height: 83px;
+  width: 48px;
+  height: 48px;
+  margin: 15px auto;
   text-align: center;
+  line-height: 48px;
+  border-radius: 6px;
 }
+.iconfont {
+  color: #fff;
+  font-size: 28px;
+}
+
 .pick-zone {
-  height: calc(100% - 83px);
+  height: calc(100% - 78px);
   background: #fff;
-  border-radius: 15px 15px 0 0;
+  border-radius: 12px 12px 0 0;
 }
