--- a/components/iconPicker/iconPicker.wxss
+++ b/components/iconPicker/iconPicker.wxss
@@ -7,7 +7,7 @@
   top: 0;
   bottom: 0;
   z-index: 1000;
-  background: rgba(0, 0, 0, .6);
+  background: rgba(0, 0, 0, .3);
   transition: all .35s cubic-bezier(0.45, 1, 0.4, 1);
 }
 .mask.hide {
@@ -36,7 +36,14 @@
   text-align: center;
   line-height: 48px;
   border-radius: 6px;
+  transform: scale(1.1);
+  opacity: 1;
+  transition: opacity .35s cubic-bezier(0.45, 1, 0.4, 1);
 }
+.hide .icon {
+  opacity: 0
+}
+
 .iconfont {
   color: #fff;
   font-size: 28px;
