--- a/components/iconPicker/iconPicker.wxss
+++ b/components/iconPicker/iconPicker.wxss
@@ -7,50 +7,54 @@
   top: 0;
   bottom: 0;
   z-index: 1000;
-  background: rgba(0, 0, 0, .3);
-  transition: all .35s cubic-bezier(0.45, 1, 0.4, 1);
+  background: rgba(0, 0, 0, .6);
+  transition: background .35s cubic-bezier(0.45, 1, 0.4, 1), visibility .35s cubic-bezier(0.45, 1, 0.4, 1);
 }
-.mask.hide {
+.hide.mask {
   visibility: hidden;
   background: transparent;
 }
 
-.icon-picker {
+.hide .main {
+  transform: translateY(100%);
+}
+.main {
   position: absolute;
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  height: 100%;
-  overflow: hidden;
-  will-change: height;
-  transition: height .35s cubic-bezier(0.45, 1, 0.4, 1);
-}
-.hide .icon-picker {
-  height: 0
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: translateY(0);
+  will-change: transform;
+  transition: transform .35s cubic-bezier(0.45, 1, 0.4, 1);
 }
 
-.icon {
-  width: 48px;
-  height: 48px;
-  margin: 15px auto;
+.result-icon {
+  width: 100%;
+  height: 80px;
   text-align: center;
-  line-height: 48px;
-  border-radius: 6px;
-  transform: scale(1.1);
-  opacity: 1;
-  transition: opacity .35s cubic-bezier(0.45, 1, 0.4, 1);
+  line-height: 80px;
+  border-radius: 12px 12px 0 0;
 }
-.hide .icon {
-  opacity: 0
-}
-
-.iconfont {
+.result-icon .iconfont {
   color: #fff;
-  font-size: 28px;
+  font-size: 48px;
 }
 
 .pick-zone {
-  height: calc(100% - 78px);
+  flex: auto;
+  width: 100%;
   background: #fff;
-  border-radius: 12px 12px 0 0;
+  margin-bottom: 15px;
+  border-radius: 0 0 12px 12px;
+}
+.pick-zone .picker {
+}
+
+.close-btn:active {
+  opacity: .6
 }
