--- a/components/iconPicker/iconPicker.wxml
+++ b/components/iconPicker/iconPicker.wxml
@@ -7,12 +7,20 @@
 
     <view class="pick-zone">
       <!-- icon选择器 -->
-      <swiper display-multiple-items="{{3}}" previous-margin="100rpx" next-margin="100rpx" current="{{currentIcon}}" duration="{{250}}" bind:change="onIconChange" class="picker">
-        <swiper-item wx:for="{{iconList}}" wx:key="{{item}}" class="picker-item">
+      <text class="title">选取图标</text>
+      <swiper previous-margin="180rpx" next-margin="180rpx" current-item-id="{{icon}}" duration="{{150}}" bind:change="onIconChange" class="picker">
+        <swiper-item wx:for="{{iconList}}" wx:key="{{item}}" item-id="{{item}}" class="picker-item {{(item === icon) && 'scale'}}">
           <text class="iconfont icon-{{item}}"></text>
         </swiper-item>
       </swiper>
+
       <!-- 颜色选择器 -->
+      <text class="title">选取颜色</text>
+      <swiper previous-margin="100rpx" next-margin="100rpx" current-item-id="{{iconColor}}" duration="{{150}}" bind:change="onIconColorChange" class="picker">
+        <swiper-item wx:for="{{iconColorList}}" wx:key="{{item}}" item-id="{{item}}" class="picker-item {{(item === iconColor) && 'scale'}}">
+          <view class="color-block" style="background: {{item}}"></view>
+        </swiper-item>
+      </swiper>
     </view>
 
     <view class="close-btn" bind:tap="onClose">
